


MIDIO128 V3.007
~~~~~~~~~~~~~~~

   o corrected SysEx output for LPC17


MIDIO128 V3.006
~~~~~~~~~~~~~~~

   o support for two MBHP_AINSER64 modules: up to 128 analog pins can be scanned!

   o improved MIDI OUT throughput


MIDIO128 V3.005
~~~~~~~~~~~~~~~

   o fixed "out of memory" issue in MIDI player


MIDIO128 V3.004
~~~~~~~~~~~~~~~

   o MIDI router supports 16 nodes now! (previously only 8)

   o added new MIOS terminal commands:
     - display network informations, modify network and OSC settings
     - display MIDI router informations, modify MIDI router settings


MIDIO128 V3.003
~~~~~~~~~~~~~~~

   o MSD mode (SD Card Reader) can now also be enabled with the "msd" command
     in MIOS Terminal


MIDIO128 V3.002
~~~~~~~~~~~~~~~

   o adaptions for new MIOS32 Bootloader V1.005
     You can safely enable the "fastboot" option of the bootloader, so that
     the application starts immediately after power-on


MIDIO128 V3.001
~~~~~~~~~~~~~~~

   o integrated MSD (Mass Storage Device) driver, so that SD Card can be accessed
     from a computer via USB (like from a SD Card Reader).

     Press SHIFT and hold MSD (3rd soft button) for two seconds to enable the driver.
     Your computer should automatically mount the SD Card.
     USB MIDI won't be available anymore.

     After disk operations, don't forget to unmount the SD Card on your computer
     first, thereafter disable MSD in the SHIFT menu.
     Thereafter USB-MIDI will be available again.

   o added integrated MIDI monitor for USB/MIDI/OSC ports (-> "Mon." page)

   o support for up to 8 analog inputs which are available at J5A and J5B
     of the MBHP_CORE_LPC17 module.

     Pins are disabled by default - once a MIDI port (such as USB1, OUT1
     or OSC1) has been assigned to the pin in the AIN page, or in an AIN entry
     of the .MIO file, the pin will send MIDI events on pot position changes.


MIDIO128 V3.000
~~~~~~~~~~~~~~~

   o initial version